--- a/src/versand/FXMLDocument.fxml
+++ b/src/versand/FXMLDocument.fxml
@@ -14,7 +14,7 @@
       <Label layoutX="55.0" layoutY="59.0" text="ID" />
       <TextField fx:id="id" layoutX="82.0" layoutY="55.0" prefHeight="25.0" prefWidth="296.0" />
       <Button layoutX="390.0" layoutY="55.0" mnemonicParsing="false" onAction="#createShippingObject" text="Speichern" />
-      <Button layoutX="470.0" layoutY="55.0" mnemonicParsing="false" text="Laden" />
+      <Button layoutX="470.0" layoutY="55.0" mnemonicParsing="false" onAction="#loadShippingObject" text="Laden" />
       <Label layoutX="530.0" layoutY="59.0" text="Status" />
       <Label layoutX="55.0" layoutY="102.0" text="Aufgegeben" />
       <DatePicker fx:id="placedDate" layoutX="128.0" layoutY="98.0" />
@@ -44,15 +44,15 @@
             <AnchorPane prefHeight="201.0" prefWidth="338.0">
                <children>
                   <CheckBox fx:id="deliveryExpress" layoutX="8.0" layoutY="14.0" mnemonicParsing="false" text="Express" />
-                  <RadioButton fx:id="deliveryLetter" layoutX="8.0" layoutY="40.0" mnemonicParsing="false" text="Brief">
+                  <RadioButton fx:id="deliveryLetter" layoutX="8.0" layoutY="40.0" mnemonicParsing="false" onAction="#toggleDeliveryType" text="Brief">
                      <toggleGroup>
-                        <ToggleGroup fx:id="type" />
+                        <ToggleGroup fx:id="deliveryType" />
                      </toggleGroup></RadioButton>
-                  <RadioButton fx:id="deliveryParcel" layoutX="69.0" layoutY="40.0" mnemonicParsing="false" selected="true" text="Päckchen" toggleGroup="$type" />
-                  <RadioButton fx:id="deliveryPackage" layoutX="153.0" layoutY="40.0" mnemonicParsing="false" text="Paket" toggleGroup="$type" />
+                  <RadioButton fx:id="deliveryParcel" layoutX="69.0" layoutY="40.0" mnemonicParsing="false" onAction="#toggleDeliveryType" selected="true" text="Päckchen" toggleGroup="$deliveryType" />
+                  <RadioButton fx:id="deliveryPackage" layoutX="153.0" layoutY="40.0" mnemonicParsing="false" onAction="#toggleDeliveryType" text="Paket" toggleGroup="$deliveryType" />
                   <Label layoutX="8.0" layoutY="68.0" text="Wunschtermin Zustellung" />
                   <DatePicker fx:id="wishDeliveryDate" layoutX="152.0" layoutY="64.0" prefHeight="25.0" prefWidth="166.0" />
-                  <CheckBox fx:id="alternativeDestinationCheckbox" layoutX="8.0" layoutY="106.0" mnemonicParsing="false" text="Alternativer Ablageort" />
+                  <CheckBox fx:id="alternativeDestinationCheckbox" layoutX="8.0" layoutY="106.0" mnemonicParsing="false" onAction="#toggleAlternativeDestination" text="Alternativer Ablageort" />
                </children>
             </AnchorPane>
          </content></TitledPane>
@@ -80,15 +80,15 @@
          <content>
             <AnchorPane prefHeight="165.0" prefWidth="105.0">
                <children>
-                  <CheckBox fx:id="insuranceCheckbox" layoutX="6.0" layoutY="14.0" mnemonicParsing="false" text="versichert" />
+                  <CheckBox fx:id="insuranceCheckbox" layoutX="6.0" layoutY="14.0" mnemonicParsing="false" onAction="#toggleInsurance" text="versichert" />
                   <VBox layoutX="6.0" layoutY="36.0" prefHeight="65.0" prefWidth="79.0">
                      <children>
-                        <RadioButton fx:id="insuranceUntil100" disable="true" mnemonicParsing="false" prefHeight="17.0" prefWidth="69.0" selected="true" text="bis 100€">
+                        <RadioButton fx:id="insuranceUntil100" disable="true" mnemonicParsing="false" onAction="#toggleInsurance500" prefHeight="17.0" prefWidth="69.0" selected="true" text="bis 100€">
                            <toggleGroup>
                               <ToggleGroup fx:id="insurance" />
                            </toggleGroup></RadioButton>
-                        <RadioButton fx:id="insuranceUntil500" disable="true" mnemonicParsing="false" text="bis 500€" toggleGroup="$insurance" />
-                        <RadioButton fx:id="insuranceAbove500" disable="true" mnemonicParsing="false" text="über 500€" toggleGroup="$insurance" />
+                        <RadioButton fx:id="insuranceUntil500" disable="true" mnemonicParsing="false" onAction="#toggleInsurance500" text="bis 500€" toggleGroup="$insurance" />
+                        <RadioButton fx:id="insuranceAbove500" disable="true" mnemonicParsing="false" onAction="#toggleInsurance500" text="über 500€" toggleGroup="$insurance" />
                      </children>
                   </VBox>
                   <Label layoutX="6.0" layoutY="115.0" text="Betrag" />
@@ -101,8 +101,8 @@
             <AnchorPane prefHeight="184.0" prefWidth="223.0">
                <children>
                   <Label layoutX="14.0" layoutY="48.0" text="Rabatt" />
-                  <Slider fx:id="salesPercent" blockIncrement="1.0" layoutX="56.0" layoutY="40.0" majorTickUnit="1.0" max="10.0" prefHeight="33.0" prefWidth="147.0" showTickLabels="true" />
-                  <Button fx:id="calculatePrice" layoutX="13.0" layoutY="103.0" mnemonicParsing="false" text="Berechnen" />
+                  <Slider fx:id="salesPercent" blockIncrement="1.0" layoutX="56.0" layoutY="40.0" majorTickUnit="1.0" max="10.0" minorTickCount="0" prefHeight="33.0" prefWidth="147.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
+                  <Button fx:id="calculatePrice" layoutX="13.0" layoutY="103.0" mnemonicParsing="false" onAction="#calculatePrice" text="Berechnen" />
                   <Label fx:id="price" layoutX="91.0" layoutY="107.0" prefHeight="17.0" prefWidth="112.0" text="Preis: " />
                </children></AnchorPane>
          </content>
